# 15-io

./: LICENSE  README.adoc  beamercolorthememetropolis.sty  beamerouterthememetropolis.sty  compile.sh  slides.tex
examples/: buffered_read.rs  buffered_write.rs  file_as_bytes.rs  file_to_string.rs  file_write.rs  line_by_line.rs
examples/csvtest/: Cargo.toml  test.csv
examples/csvtest/src/: .main.rs.swp  main.rs
examples/toml2json/: Cargo.toml
