[package]
name = "toml2json"
version = "0.1.0"
authors = ["meisterluk <admin@lukas-prokop.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde_json = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
